fix(teamCodeBind): overflow text

--- a/src/pages/teamInfo/index.css
+++ b/src/pages/teamInfo/index.css
@@ -28,14 +28,19 @@
   padding-top: 40px;
 }
 .left {
+  flex-shrink: 0;
   padding-left: 50px;
   left: 50px;
 
 }
 .right {
+  flex-shrink: 0;
   padding-right: 30px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px;
 }
-
 .table-wrapper {
   width: 100%;
   left: 40px;
